# Code-Editor

./: CMakeLists.txt  CodeHighlighter.cpp  CodeHighlighter.h  CodeViewer.cpp  CodeViewer.h  CounterList.cpp  CounterList.h  CounterSelection.cpp  CounterSelection.h  CounterSelection.ui  CounterWriter.cpp  CounterWriter.h  DirectoryView.cpp  DirectoryView.h  FileViewer.cpp  FileViewer.h  MainWindow.cpp  MainWindow.h  ParentChildTree.cpp  ParentChildTree.h  PerformanceGraph.cpp  PerformanceGraph.h  PerformanceWriter.cpp  PerformanceWriter.h  README.md  ScrollArea.cpp  ScrollArea.h  ScrollCommandValues.cpp  ScrollCommandValues.h  ScrollCommands.cpp  ScrollCommands.h  TestCounterWriter.cpp  TestCounterWriter.h  TestParentChildTree.cpp  TestParentChildTree.h  TestSuite.cpp  TestSuite.h  main.cpp  mainwindow.ui  testFile.ui
